# aircraft-scheduling-problem

./: .gitignore  Makefile  README.md  \  callgrind.out.8173  meson.build
data/: best-known-values.csv  table.txt
data/instances/: toy120_30.txt  toy20_4.txt  toy6_2.txt
data/results/: n3m10A.txt  n3m10B.txt  n3m10C.txt  n3m10D.txt  n3m10E.txt  n3m20A.txt  n3m20B.txt  n3m20C.txt  n3m20D.txt  n3m20E.txt  n3m40A.txt  n3m40B.txt  n3m40C.txt  n3m40D.txt  n3m40E.txt  n5m50A.txt  n5m50B.txt  n5m50C.txt  n5m50D.txt  n5m50E.txt
include/: ASP.hpp  construction.hpp  flight.hpp  instance.hpp  local_search.hpp  moves.hpp  runway.hpp  solution.hpp  utils.hpp
meson/compiler-flags/: meson.build
meson/wrapdb-packages/: meson.build
src/: ASP.cpp  GILS.cpp  GRASP.cpp  RVND.cpp  VND.cpp  construction.cpp  flight.cpp  instance.cpp  main.cpp  meson.build  moves.cpp  neighborhood.cpp  perturbation.cpp  runway.cpp  solution.cpp  utils.cpp
subprojects/argparse-3.2/: .meson-subproject-wrap-hash.txt
